--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,25 @@
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.1
-loader_version=0.14.22
+
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
+loader_version=0.14.24
+
+#Fabric api
+fabric_version=0.91.0+1.20.1
+
+# Mappings
+# https://lambdaurora.dev/tools/import_quilt.html
+qm_version = 23
+# https://parchmentmc.org/docs/getting-started
+parchment_version = 2023.08.20
+
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
+maven_group=ru.littleligr
+archives_base_name=creatopico_utils
 
-# Dependencies
-fabric_version=0.89.1+1.20.2
+customportalapi=0.0.1-beta64-1.20
+create_version = 0.5.1-d-build.1161+mc1.20.1
